Adds CMS for admins
